Skill layout problem fixed, now I gotta deal with Intersections problems

--- a/lucsas/src/sass/styleComponents/UI Components/_header.scss
+++ b/lucsas/src/sass/styleComponents/UI Components/_header.scss
@@ -7,7 +7,7 @@ header {
   position: fixed;
   /* top: -15%;  Add Javascript to animate header*/
   top: 3%;
-  z-index: 2;
+  z-index: 5;
 
   @include center;
 
